国际化功能

--- a/src/core_plugins/kibana/public/management/sections/indices/_create.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/_create.html
@@ -5,7 +5,9 @@
         <h1>Configure an index pattern</h1>
         In order to use Kibana you must configure at least one index pattern. Index patterns are
         used to identify the Elasticsearch index to run search and analytics against. They are also
-        used to configure fields.
+        used to configure fields.123
+        
+        <h1 translate>create.H1_CONFIGURE_INDEX_PATTERN</h1>
       </div>
       <div>
         <form name="form" role="form" class="well" ng-submit="createIndexPattern()">
